turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:27: error: type mismatch;
 found   : Int
 required: java.awt.Color
  mark(rule(state)(currentColor)(NEW_COLOR))
                                ^Turmite:32: error: not found: value U_TURN
    case U_TURN => back(); forward();
         ^